Updating course notes

--- a/02.sinatra-forms/2.1.Intro To Capybara.md
+++ b/02.sinatra-forms/2.1.Intro To Capybara.md
@@ -1,5 +1,8 @@
 # Intro To Capybara
 
+## Student Solution
+### [https://github.com/mrsdo/intro-to-capybara]
+
 ## Overview
 
 In this lesson, we'll discuss integration testing with Capybara.
